--- a/Ass3/test.ipynb
+++ b/Ass3/test.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "40b64b27",
+   "id": "a1ae525b",
    "metadata": {},
    "outputs": [
     {
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "aeb94e5b",
+   "id": "e461f1db",
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "53eadd39",
+   "id": "47f4a6a1",
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "def5e3c9",
+   "id": "8ff7d427",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "12ca8e13",
+   "id": "3d43721c",
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "c7a4ff34",
+   "id": "b2cc9f57",
    "metadata": {},
    "outputs": [
     {
@@ -161,8 +161,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "8169d59c",
+   "execution_count": 70,
+   "id": "3d1e66de",
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,8 @@
     }
    ],
    "source": [
-    "from pyflann import *\n",
+    "# from pyflann import *\n",
+    "import pyflann\n",
     "import numpy as np\n",
     "\n",
     "dataset = np.array(\n",
@@ -189,9 +190,12 @@
     "    [[1., 1, 1, 1, 1],\n",
     "     [90, 90, 10, 10, 1]\n",
     "     ])\n",
+    "\n",
+    "pyflann.set_distance_type(distance_type='euclidean')\n",
     "flann = FLANN()\n",
     "result, dists = flann.nn(\n",
     "    dataset, testset, 2, algorithm=\"kmeans\", branching=32, iterations=7, checks=16)\n",
+    "\n",
     "print(result)\n",
     "print( dists)\n",
     "\n",
@@ -207,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "1d24b445",
+   "id": "865d3574",
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "081c8a50",
+   "id": "bbcb0f8c",
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "f4b36e32",
+   "id": "a7d8eeb7",
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "027cb517",
+   "id": "bd298785",
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "26a4349e",
+   "id": "610de785",
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +324,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "e4569179",
+   "id": "a5fded06",
    "metadata": {},
    "outputs": [
     {
@@ -347,13 +351,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6e5733fb",
+   "execution_count": 62,
+   "id": "54876979",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for -: 'list' and 'int'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [62]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m a \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m4\u001b[39m,\u001b[38;5;241m5\u001b[39m,\u001b[38;5;241m6\u001b[39m]\n\u001b[0;32m----> 2\u001b[0m a \u001b[38;5;241m=\u001b[39m \u001b[43ma\u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m2\u001b[39;49m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(a)\n",
+      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for -: 'list' and 'int'"
+     ]
+    }
+   ],
+   "source": [
+    "a = [4,5,6]\n",
+    "a = a-2\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "1c0a4f62",
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = "
+    "\n",
+    "def knnsearch(patches_db, input_patches_p,k):\n",
+    "\n",
+    "    NNs = []\n",
+    "    Dist = []\n",
+    "    for i in range(len(input_patches_p)):\n",
+    "        patch = input_patches_p[i]\n",
+    "        distances = np.linalg.norm(patches_db-patch, axis=1)\n",
+    "\n",
+    "        min_index = np.argpartition(distances,k)\n",
+    "        min_index = min_index[:k]\n",
+    "        NNs.append(min_index)\n",
+    "        Dist.append(distances[min_index])\n",
+    "    return np.array(NNs),np.array(Dist)\n",
+    "\n",
+    "dataset = np.array(\n",
+    "    [[1., 1, 1, 2, 3],\n",
+    "     [10, 10, 10, 3, 2],\n",
+    "     [100, 100, 2, 30, 1]\n",
+    "     ])\n",
+    "testset = np.array(\n",
+    "    [[1., 1, 1, 1, 1],\n",
+    "     [90, 90, 10, 10, 1]\n",
+    "     ])\n",
+    "1., 1, 1, 2, 3]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "e980a073",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 1]\n",
+      " [2 1]]\n",
+      "[[  2.23606798  15.74801575]\n",
+      " [ 25.76819745 113.35784049]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "NNs, Dist = knnsearch(dataset, testset, 2)\n",
+    "print(NNs)\n",
+    "print(Dist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bc38bd55",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
