--- a/Ass3/test.ipynb
+++ b/Ass3/test.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b42879ab",
+   "id": "fe24ec43",
    "metadata": {},
    "outputs": [
     {
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "c1f2dd72",
+   "id": "4f31fb4f",
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "753370e4",
+   "id": "b384cd00",
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "3585ac17",
+   "id": "0c866cf7",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "fc551824",
+   "id": "8c465261",
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "daeba2b4",
+   "id": "447569cb",
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c7ab00f9",
+   "id": "5d1fba09",
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "44cd4301",
+   "id": "c2c39072",
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "bf2aea34",
+   "id": "62391c6b",
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "1b9b45a1",
+   "id": "2631972c",
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18ad4fcb",
+   "id": "82295ea4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "e3c01960",
+   "id": "17c3b2d7",
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +382,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "ad787571",
+   "id": "05ac6326",
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "ce22b700",
+   "id": "34119da4",
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "d6d7d154",
+   "id": "4a4291f9",
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "9552183d",
+   "id": "c61b60b4",
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "fbd1ae39",
+   "id": "24de96a6",
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "dcffb808",
+   "id": "09778277",
    "metadata": {
     "scrolled": true
    },
@@ -515,8 +515,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "6a1a0bdf",
+   "execution_count": 24,
+   "id": "1affa1c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +547,6 @@
     "    return k_idx.T, k_dist.T\n",
     "\n",
     "def knnsearch_cosine(patches_db, input_patches_p,k):\n",
-    "\n",
     "    NNs = []\n",
     "    Dist = []\n",
     "    for i in range(len(input_patches_p)):\n",
@@ -568,6 +567,10 @@
     "\n",
     "def knnsearch_scikit(patches_db, input_patches,k, custom_distance_metric):\n",
     "    nbrs = NearestNeighbors(n_neighbors=k, algorithm='ball_tree', metric = custom_distance_metric).fit(patches_db)\n",
+    "    distances, indices = nbrs.kneighbors(input_patches)\n",
+    "    return indices, distances  #NNs,Dist\n",
+    "def knnsearch_scikit_brut(patches_db, input_patches,k, metric):\n",
+    "    nbrs = NearestNeighbors(n_neighbors=k, algorithm='brute', metric = metric).fit(patches_db)\n",
     "    distances, indices = nbrs.kneighbors(input_patches)\n",
     "    return indices, distances  #NNs,Dist\n",
     "\n",
@@ -598,11 +601,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "c7a30117",
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 25,
+   "id": "44dd8064",
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -622,8 +623,8 @@
       "       [2, 1]]), array([[0.10557281, 0.11526976],\n",
       "       [0.01056123, 0.14729308]]))\n",
       "Random: (array([[0, 1],\n",
-      "       [2, 1]]), array([[0.10557281, 0.11526976],\n",
-      "       [0.01056123, 0.14729308]]))\n"
+      "       [2, 1]]), array([[  2.23606798,  15.74801575],\n",
+      "       [ 25.76819745, 113.35784049]]))\n"
      ]
     }
    ],
@@ -632,28 +633,41 @@
     "print(\"Euclidean:\", kneareset_neighbour_scipy(dataset, testset, 2, distance_metric = 'euclidean') )\n",
     "print(\"\\nCosine:\", knnsearch_scikit(dataset,testset,2,custom_distance_metric=cosine_distance))\n",
     "print(\"Cosine:\",knnsearch_cosine(dataset,testset,2))\n",
-    "print(\"Random:\", knnsearch_scikit(dataset,testset,2,cosine_distance))\n"
+    "print(\"Random:\", knnsearch_scikit(dataset,testset,2,custom_distance_metric = 'minkowski'))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "84a15d5f",
+   "execution_count": 31,
+   "id": "69f960a6",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'dataset' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [1]\u001b[0m, in \u001b[0;36m<cell line: 12>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     10\u001b[0m     distances, indices \u001b[38;5;241m=\u001b[39m nbrs\u001b[38;5;241m.\u001b[39mkneighbors(input_patches)\n\u001b[1;32m     11\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m indices, distances\n\u001b[0;32m---> 12\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mRandom:\u001b[39m\u001b[38;5;124m\"\u001b[39m, knnsearch_scikit(\u001b[43mdataset\u001b[49m,testset,\u001b[38;5;241m2\u001b[39m,euclidean_distance))\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'dataset' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random: (array([[0, 1],\n",
+      "       [2, 1]]), array([[0.10557281, 0.11526976],\n",
+      "       [0.01056123, 0.14729308]]))\n",
+      "1-Cosine Similarity:  [[0.10557281 0.58420004]\n",
+      " [0.11526976 0.14729308]\n",
+      " [0.27931442 0.01056123]]\n",
+      "Cosine Distances:  [[0.10557281 0.58420004]\n",
+      " [0.11526976 0.14729308]\n",
+      " [0.27931442 0.01056123]]\n",
+      "knnsearch  (array([[0, 1],\n",
+      "       [2, 1]]), array([[0.10557281, 0.11526976],\n",
+      "       [0.01056123, 0.14729308]]))\n",
+      "(40000, 2)\n",
+      "(40000, 2)\n",
+      "time elapased:  25.119036197662354\n"
      ]
     }
    ],
    "source": [
+    "import time\n",
+    "from sklearn.metrics.pairwise import cosine_similarity\n",
+    "from sklearn.metrics.pairwise import cosine_distances\n",
     "def euclidean_distance(x,y):\n",
     "    return sqrt(np.sum((x-y)**2))\n",
     "\n",
@@ -665,255 +679,71 @@
     "    nbrs = NearestNeighbors(n_neighbors=k, algorithm='ball_tree', metric = custom_distance_metric).fit(patches_db)\n",
     "    distances, indices = nbrs.kneighbors(input_patches)\n",
     "    return indices, distances\n",
-    "print(\"Random:\", knnsearch_scikit(dataset,testset,2,euclidean_distance))"
+    "print(\"Random:\", knnsearch_scikit(dataset,testset,2,custom_distance_metric = cosine_distance))\n",
+    "print(\"1-Cosine Similarity: \",1-cosine_similarity(dataset, testset, dense_output=True))\n",
+    "print(\"Cosine Distances: \",cosine_distances(dataset, testset))\n",
+    "print(\"knnsearch \",knnsearch_scikit_brut(dataset,testset,2,metric = 'cosine') )\n",
+    "r1 = np.random.rand(30000,25)\n",
+    "r2 = np.random.rand(40000,25)\n",
+    "start_time = time.time()\n",
+    "NNs, Dist = knnsearch_scikit_brut(r1,r2,2,metric = 'cosine') \n",
+    "print(NNs.shape)\n",
+    "print(Dist.shape)\n",
+    "#NNs, Dist = knnsearch_scikit(r1,r2,2,custom_distance_metric=cosine_distance)\n",
+    "#print(\"hey: \",NNs, Dist)\n",
+    "#Dist = cosine_distances(r1, r2)\n",
+    "#print(\"Cosine Distances: \",cosine_distances(r1, r2))\n",
+    "end_time = time.time()\n",
+    "print(\"time elapased: \",end_time-start_time)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "de10d34c",
+   "execution_count": 22,
+   "id": "2ff9acd0",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "flip0 shape =  (262, 484, 3)\n",
-      "flip1 shape =  (262, 484, 3)\n",
-      "rotated90 shape =  (484, 262, 3)\n",
-      "rotated180 shape =  (262, 484, 3)\n",
-      "\n",
-      "AFTER\n",
-      "\n",
-      "flip0 shape =  (262, 484, 3)\n",
-      "flip1 shape =  (262, 484, 3)\n",
-      "rotated90 shape =  (262, 484, 3)\n",
-      "rotated180 shape =  (262, 484, 3)\n",
-      "[[[  3 201 101]\n",
-      "  [  2 201 102]\n",
-      "  [  1 201 102]\n",
-      "  [  2 201 101]\n",
-      "  [  2 201 101]]\n",
-      "\n",
-      " [[  0 199 100]\n",
-      "  [233 198  99]\n",
-      "  [240 199  99]\n",
-      "  [240 199 100]\n",
-      "  [ 22 199 100]]\n",
-      "\n",
-      " [[231 199 100]\n",
-      "  [253 198  99]\n",
-      "  [254 198 100]\n",
-      "  [255 198 100]\n",
-      "  [233 199 100]]\n",
-      "\n",
-      " [[255 198 101]\n",
-      "  [255 198 100]\n",
-      "  [254 198 101]\n",
-      "  [253 199 101]\n",
-      "  [253 198 101]]\n",
-      "\n",
-      " [[254 198 102]\n",
-      "  [254 198 102]\n",
-      "  [255 198 102]\n",
-      "  [254 198 102]\n",
-      "  [253 199 101]]]\n",
-      "[[[  3 201 101]\n",
-      "  [  2 201 102]\n",
-      "  [  1 201 102]\n",
-      "  [  2 201 101]\n",
-      "  [  2 201 101]]\n",
-      "\n",
-      " [[  0 199 100]\n",
-      "  [233 198  99]\n",
-      "  [240 199  99]\n",
-      "  [240 199 100]\n",
-      "  [ 22 199 100]]\n",
-      "\n",
-      " [[231 199 100]\n",
-      "  [253 198  99]\n",
-      "  [254 198 100]\n",
-      "  [255 198 100]\n",
-      "  [233 199 100]]\n",
-      "\n",
-      " [[255 198 101]\n",
-      "  [255 198 100]\n",
-      "  [254 198 101]\n",
-      "  [253 199 101]\n",
-      "  [253 198 101]]\n",
-      "\n",
-      " [[254 198 102]\n",
-      "  [254 198 102]\n",
-      "  [255 198 102]\n",
-      "  [254 198 102]\n",
-      "  [253 199 101]]]\n",
-      "[[[  3 201 101]\n",
-      "  [  2 201 102]\n",
-      "  [  1 201 102]\n",
-      "  [  2 201 101]\n",
-      "  [  2 201 101]]\n",
-      "\n",
-      " [[  0 199 100]\n",
-      "  [233 198  99]\n",
-      "  [240 199  99]\n",
-      "  [240 199 100]\n",
-      "  [ 22 199 100]]\n",
-      "\n",
-      " [[231 199 100]\n",
-      "  [253 198  99]\n",
-      "  [254 198 100]\n",
-      "  [255 198 100]\n",
-      "  [233 199 100]]\n",
-      "\n",
-      " [[255 198 101]\n",
-      "  [255 198 100]\n",
-      "  [254 198 101]\n",
-      "  [253 199 101]\n",
-      "  [253 198 101]]\n",
-      "\n",
-      " [[254 198 102]\n",
-      "  [254 198 102]\n",
-      "  [255 198 102]\n",
-      "  [254 198 102]\n",
-      "  [253 199 101]]]\n",
-      "[[[  3 201 101]\n",
-      "  [  2 201 102]\n",
-      "  [  1 201 102]\n",
-      "  [  2 201 101]\n",
-      "  [  2 201 101]]\n",
-      "\n",
-      " [[  0 199 100]\n",
-      "  [233 198  99]\n",
-      "  [240 199  99]\n",
-      "  [240 199 100]\n",
-      "  [ 22 199 100]]\n",
-      "\n",
-      " [[231 199 100]\n",
-      "  [253 198  99]\n",
-      "  [254 198 100]\n",
-      "  [255 198 100]\n",
-      "  [233 199 100]]\n",
-      "\n",
-      " [[255 198 101]\n",
-      "  [255 198 100]\n",
-      "  [254 198 101]\n",
-      "  [253 199 101]\n",
-      "  [253 198 101]]\n",
-      "\n",
-      " [[254 198 102]\n",
-      "  [254 198 102]\n",
-      "  [255 198 102]\n",
-      "  [254 198 102]\n",
-      "  [253 199 101]]]\n",
-      "[[[  3 201 101]\n",
-      "  [  2 201 102]\n",
-      "  [  1 201 102]\n",
-      "  [  2 201 101]\n",
-      "  [  2 201 101]]\n",
-      "\n",
-      " [[  0 199 100]\n",
-      "  [233 198  99]\n",
-      "  [240 199  99]\n",
-      "  [240 199 100]\n",
-      "  [ 22 199 100]]\n",
-      "\n",
-      " [[231 199 100]\n",
-      "  [253 198  99]\n",
-      "  [254 198 100]\n",
-      "  [255 198 100]\n",
-      "  [233 199 100]]\n",
-      "\n",
-      " [[255 198 101]\n",
-      "  [255 198 100]\n",
-      "  [254 198 101]\n",
-      "  [253 199 101]\n",
-      "  [253 198 101]]\n",
-      "\n",
-      " [[254 198 102]\n",
-      "  [254 198 102]\n",
-      "  [255 198 102]\n",
-      "  [254 198 102]\n",
-      "  [253 199 101]]]\n"
+      "['braycurtis', 'canberra', 'chebyshev', 'cityblock', 'correlation', 'cosine', 'cosine', 'dice', 'euclidean', 'hamming', 'haversine', 'jaccard', 'kulsinski', 'l1', 'l2', 'mahalanobis', 'manhattan', 'matching', 'minkowski', 'nan_euclidean', 'precomputed', 'rogerstanimoto', 'russellrao', 'seuclidean', 'sokalmichener', 'sokalsneath', 'sqeuclidean', 'wminkowski', 'yule']\n"
      ]
     }
    ],
    "source": [
-    "import cv2\n",
-    "import numpy as np\n",
-    "img = cv2.imread(\"inp3_building_SR_paper_l1.png\")\n",
-    "# print(\"before shape = \", img.shape)\n",
-    "# (h, w) = img.shape[:2]\n",
-    "# (cX, cY) = (w // 2, h // 2)\n",
-    "# M = cv2.getRotationMatrix2D((cX, cY), -180, 1.0)\n",
-    "# rotated = cv2.warpAffine(img, M, (w, h))\n",
-    "# cv2.imshow(\"Rotated by -180 Degrees\", rotated)\n",
-    "# cv2.waitKey()\n",
-    "# cv2.destroyAllWindows()\n",
-    "# print(\"rotated shape = \",rotated.shape)\n",
-    "\n",
-    "\n",
-    "flip0 = cv2.flip(img,0)\n",
-    "flip1 = cv2.flip(img,1)\n",
-    "rotated90 = cv2.rotate(img, cv2.ROTATE_90_CLOCKWISE)\n",
-    "rotated180 = cv2.rotate(img, cv2.ROTATE_180)\n",
-    "\n",
-    "print(\"flip0 shape = \", flip0.shape)\n",
-    "print(\"flip1 shape = \", flip1.shape)\n",
-    "print(\"rotated90 shape = \", rotated90.shape)\n",
-    "print(\"rotated180 shape = \", rotated180.shape)\n",
-    "\n",
-    "flip0_back = cv2.flip(flip0,0)\n",
-    "flip1_back = cv2.flip(flip1,1)\n",
-    "rotated90_back = cv2.rotate(rotated90, cv2.ROTATE_90_COUNTERCLOCKWISE)\n",
-    "rotated180_back = cv2.rotate(rotated180, cv2.ROTATE_180)\n",
-    "cv2.imshow(\"hey\",flip0_back)\n",
-    "cv2.imshow(\"hey2\",flip1_back)\n",
-    "cv2.imshow(\"hey3\",rotated90_back)\n",
-    "cv2.imshow(\"hey4\",rotated180_back)\n",
-    "cv2.waitKey()\n",
-    "cv2.destroyAllWindows()\n",
-    "print(\"\\nAFTER\\n\")\n",
-    "print(\"flip0 shape = \", flip0_back.shape)\n",
-    "print(\"flip1 shape = \", flip1_back.shape)\n",
-    "print(\"rotated90 shape = \", rotated90_back.shape)\n",
-    "print(\"rotated180 shape = \", rotated180_back.shape)\n",
-    "\n",
-    "\n",
-    "flip0_back = flip0_back.astype('int')\n",
-    "flip1_back = flip1_back.astype('int')\n",
-    "rotated90_back = rotated90_back.astype('int')\n",
-    "rotated180_back = rotated180_back.astype('int')\n",
-    "\n",
-    "avg_img = (flip0_back + flip1_back + rotated90_back + rotated180_back)//4\n",
-    "avg_img = avg_img.astype('uint8')\n",
-    "\n",
-    "cv2.imshow(\"avg image\",avg_img)\n",
-    "cv2.waitKey()\n",
-    "cv2.destroyAllWindows()\n",
-    "\n",
-    "# rotated90 = cv2.rotate(img, cv2.ROTATE_90_CLOCKWISE)\n",
-    "# rotated180 = cv2.rotate(src, cv2.ROTATE_180)\n",
-    "# rotated90_ = cv2.rotate(src, cv2.ROTATE_90_COUNTERCLOCKWISE)\n",
-    "# print(\"rotated shape = \",rotated90.shape)\n",
-    "# cv2.imshow(\"hey\",rotated90)\n",
-    "# cv2.waitKey()\n",
-    "# cv2.destroyAllWindows()"
+    "import sklearn\n",
+    "print(sorted(sklearn.neighbors.VALID_METRICS['brute']))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "068e177c",
+   "id": "05a8f8b9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = []"
+    "import cv2\n",
+    "import numpy as np\n",
+    "src = cv2.imread(\"inp1_forest.png\")\n",
+    "comp1 = cv2.imread(\"inp1_forest_nearest.png\")\n",
+    "comp2 = cv2.imread(\"inp1_forest_bicubic.png\")\n",
+    "# src = src.astype('np.uint8')\n",
+    "# comp1 = comp1.astype('np.uint8')\n",
+    "#Hori = np.concatenate(src,comp1,axis=1)\n",
+    "# Vert = np.concatenate(src,comp1,axis=0)\n",
+    "cv2.imshow(\"src\",src)\n",
+    "cv2.imshow(\"comp\",comp1)\n",
+    "# cv2.imshow(\"Hori comparison\",Hori)\n",
+    "# cv2.imshow(\"Vert comparison\",Vert)\n",
+    "cv2.waitKey()\n",
+    "cv2.destroyAllWindows()\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "d82beb5f",
+   "id": "f6c356e2",
    "metadata": {},
    "outputs": [
     {
@@ -959,7 +789,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "9d8df2f7",
+   "id": "f2718f81",
    "metadata": {},
    "outputs": [
     {
@@ -1019,7 +849,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "06fb0bfe",
+   "id": "7ced81f5",
    "metadata": {},
    "outputs": [
     {
@@ -1052,7 +882,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "a2da414f",
+   "id": "ac9e2ff6",
    "metadata": {},
    "outputs": [
     {
@@ -1101,7 +931,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "a22309c2",
+   "id": "ea47a219",
    "metadata": {},
    "outputs": [
     {
@@ -1135,7 +965,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "565d08f5",
+   "id": "370f9e66",
    "metadata": {},
    "outputs": [
     {
